--- a/course3map.html
+++ b/course3map.html
@@ -99,35 +99,35 @@
       // 「堺の歴史と匠の技コース」のスポット情報
       const spots = [
         {
-          title: 'さかい利晶の杜',
+          title: '1. さかい利晶の杜',
           lat: 34.576185,
           lng: 135.479539,
           img: 'risho_no_mori.jpg', // 画像はダミーです
           desc: '千利休と与謝野晶子、堺の偉大な文化人について学べる施設。茶の湯体験もできます。'
         },
         {
-          title: '堺伝統産業会館',
+          title: '2. 堺伝統産業会館',
           lat: 34.572765,
           lng: 135.474668,
           img: 'sakai_densan.jpg', // 画像はダミーです
           desc: '世界に誇る堺打刃物をはじめ、線香や和菓子など堺の「匠の技」が集結しています。'
         },
         {
-          title: 'かん袋',
+          title: '3. かん袋',
           lat: 34.576571,
           lng: 135.480034,
           img: 'kanbukuro.jpg', // 画像はダミーです
           desc: '鎌倉時代創業の老舗。名物「くるみ餅」は、とろりとした緑の餡が絶品です。'
         },
         {
-          title: '開口神社',
+          title: '4. 開口神社',
           lat: 34.5744,
           lng: 135.4776,
           img: 'aguchi_jinja.jpg', // 画像はダミーです
           desc: '「大寺さん」の愛称で親しまれる堺の総鎮守。由緒ある神社で心を落ち着かせましょう。'
         },
         {
-          title: '旧堺燈台',
+          title: '5. 旧堺燈台',
           lat: 34.582861,
           lng: 135.464619,
           img: 'sakai_lighthouse.jpg', // 画像はダミーです
