コース２番号

--- a/course2map.html
+++ b/course2map.html
@@ -99,35 +99,35 @@
       // 新しい「堺の歴史とグルメ満喫コース」のスポット
       const spots = [
         {
-          title: '南宗寺',
+          title: '1. 南宗寺',
           lat: 34.568889,
           lng: 135.469501,
           img: 'nansozi.jpg',
           desc: '枯山水庭園が美しいお寺。千利休ゆかりの茶室もあります。'
         },
         {
-          title: '菜食和合 茶倉',
+          title: '2. 菜食和合 茶倉',
           lat: 34.567762,
           lng: 135.484299,
           img: 'chakura.jpg',
           desc: '南宗寺の近く。体に優しい精進料理でランチはいかがですか。'
         },
         {
-          title: '百舌鳥八幡宮',
+          title: '3. 百舌鳥八幡宮',
           lat: 34.554669,
           lng: 135.494873,
           img: 'mozuhachimangu.jpg',
           desc: '樹齢800年の巨大なクスノキは圧巻。秋の月見祭が有名です。'
         },
         {
-          title: 'ジェラッテリア&カフェ リカリカ',
+          title: '4. ジェラッテリア&カフェ リカリカ',
           lat: 34.566394,
           lng: 135.498004,
           img: 'ricarica.jpg',
           desc: '散策の休憩に。素材にこだわった本格ジェラートが人気です。'
         },
         {
-          title: 'とんかつ・洋食の店 ICHIBAN',
+          title: '5. とんかつ・洋食の店 ICHIBAN',
           lat: 34.563079,
           lng: 135.492282,
           img: 'ichiban.jpg',
