観光マップ解説編集

--- a/kankou_maps.html
+++ b/kankou_maps.html
@@ -109,119 +109,119 @@
           lat: 34.56023301912434,
           lng: 135.48639590009105,
           img: 'mozubizita-.jpg',
-          desc: 'にごり湯をかけ流し！'
+          desc: '観光案内所・シアタールーム・グッズ販売などを備えた施設です。'
         },
         {
           title: '堺市博物館',
           lat: 34.55922020660278,
           lng: 135.48431038289627,
           img: 'hakubutukan.jpg',
-          desc: '山の中の癒しの宿'
+          desc: '堺の歴史と文化がわかる博物館。古代から近代までの展示があります。'
         },
         {
           title: '大仙公園 日本庭園',
           lat: 34.55994182649412,
           lng: 135.48051898104532,
           img: 'niwa.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '美しい日本庭園で、四季折々の風景が楽しめます。'
         },
         {
           title: 'こ・ふんカフェ',
           lat: 34.565210137996665,
           lng: 135.4919852000911,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '古墳をテーマにしたカフェ。古墳グッズも販売しています。'
         },
         {
           title: '堺市都市緑化センター',
           lat: 34.55638334343915,
           lng: 135.483294965193,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '堺の自然と緑を楽しむことができる施設。四季折々の花々が美しいです。'
         },
         {
           title: '堺市茶室「伸庵」「黄梅庵」',
           lat: 34.560155574462414,
           lng: 135.48403175188588,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '堺の伝統的な茶室で、茶道体験ができます。静かな時間を過ごせます。'
         },
         {
           title: '南宗寺',
           lat: 34.56888958690531,
           lng: 135.46950172726895,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '枯山水庭園が美しいお寺。千利休ゆかりの茶室もあります。'
         },
         {
           title: '百舌鳥八幡宮',
           lat: 34.55466971519879,
           lng: 135.4948733019398,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '堺の総鎮守。歴史ある神社で、初詣や七五三に訪れる人も多いです。'
         },
         {
           title: '卵かけめし 肉すい専門 やまや',
           lat: 34.559108904829685,
           lng: 135.4748054471122,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '堺の名物、卵かけご飯と肉うどんの専門店。地元の人に愛される味です。'
         },
         {
           title: 'アサイー工房 三国ヶ丘店 アサイー専門店',
           lat: 34.56324951439168,
           lng: 135.49269898015325,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: 'アサイーを使ったスムージーやボウルが楽しめる専門店。健康志向の方におすすめです。'
         },
         {
           title: 'とんかつ・洋食の店ICHIBAN',
           lat: 34.56307993738588,
           lng: 135.49228231132642,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '地元で評判のとんかつ屋さん。ボリューム満点で大満足！'
         },
         {
           title: 'ジェラッテリア&カフェ リカリカ',
           lat: 34.56639489542492,
           lng: 135.4980045781432,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '散策の休憩に。素材にこだわった本格ジェラートが人気です。'
         },
         {
           title: 'はや 総本店',
           lat: 34.567969175753454,
           lng: 135.49010939790872,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '堺の老舗和菓子店。名物の「くるみ餅」は、ふわっとした食感が特徴です。'
         },
         {
           title: '菜食和合茶倉（ちゃくら）',
           lat: 34.56776229887743,
           lng: 135.4842997220481,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '地元の新鮮な野菜を使った料理が楽しめるカフェ。ヘルシー志向の方におすすめです。'
         },
         {
           title: 'WING TIP',
           lat: 34.562737432268975,
           lng: 135.48076357251728,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '堺の隠れ家カフェ。落ち着いた雰囲気で、ゆったりとした時間を過ごせます。'
         },
         {
           title: 'ロルモンクレープ',
           lat: 34.563391317898315,
           lng: 135.479796674714,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '手作りのクレープ専門店。甘いものからお食事系まで、豊富なメニューが魅力です。'
         },
         {
           title: '花茶碗（古墳カレー）',
           lat: 34.557732220504576,
           lng: 135.48764677159676,
           img: 'images/03.jpg',
-          desc: '歴史ある露天風呂'
+          desc: '古墳をテーマにしたカレー専門店。ユニークなメニューが楽しめます。'
         }
       ];
 
