観光マップ写真追加

--- a/kankou_maps.html
+++ b/kankou_maps.html
@@ -129,7 +129,7 @@
           title: 'こ・ふんカフェ',
           lat: 34.565210137996665,
           lng: 135.4919852000911,
-          img: 'images/03.jpg',
+          img: 'kofuncafe.jpg',
           desc: '古墳をテーマにしたカフェ。古墳グッズも販売しています。'
         },
         {
@@ -150,14 +150,14 @@
           title: '南宗寺',
           lat: 34.56888958690531,
           lng: 135.46950172726895,
-          img: 'images/03.jpg',
+          img: 'nansozi.jpg',
           desc: '枯山水庭園が美しいお寺。千利休ゆかりの茶室もあります。'
         },
         {
           title: '百舌鳥八幡宮',
           lat: 34.55466971519879,
           lng: 135.4948733019398,
-          img: 'images/03.jpg',
+          img: 'mozuhachimangu.jpg',
           desc: '堺の総鎮守。歴史ある神社で、初詣や七五三に訪れる人も多いです。'
         },
         {
@@ -185,7 +185,7 @@
           title: 'ジェラッテリア&カフェ リカリカ',
           lat: 34.56639489542492,
           lng: 135.4980045781432,
-          img: 'images/03.jpg',
+          img: 'ricarica.jpg',
           desc: '散策の休憩に。素材にこだわった本格ジェラートが人気です。'
         },
         {
