--- a/kankou_maps.html
+++ b/kankou_maps.html
@@ -171,7 +171,7 @@
           title: 'アサイー工房 三国ヶ丘店 アサイー専門店',
           lat: 34.56324951439168,
           lng: 135.49269898015325,
-          img: 'asai.jpg',
+          img: 'asai.jpeg',
           desc: 'アサイーを使ったスムージーやボウルが楽しめる専門店。健康志向の方におすすめです。'
         },
         {
