--- a/hotel3.html
+++ b/hotel3.html
@@ -133,7 +133,7 @@
           <div class="hotel-content">
             <h3>ホテル　アゴーラ　リージェンシー大阪堺</h3>
             <p>
-              南海本線堺駅西口直結でアクセス抜群。大阪ミナミの中心地の難波より電車で約10分と大阪市内からも近く、関西空港からも電車で約37分と国内外を問わず遠方からのゲストのお迎えも容易です。また近隣には高速道路の出入口もありお車でのお越しもスムーズ。USJや、フェニーチェ堺（堺市民芸術文化ホール）、J－GREEN堺（堺市立サッカー・ナショナルトレーニングセンター）、長居陸上競技場（ヤンマースタジアム長居）などへのアクセスにも便利です。
+              南海本線堺駅西口直結でアクセス抜群。大阪市内からも近く、関西空港からも近いため国内外を問わず遠方からのゲストのお迎えも容易。また近隣には高速道路の出入口もありお車でのお越しも可能。USJや、フェニーチェ堺（堺市民芸術文化ホール）、J－GREEN堺（堺市立サッカー・ナショナルトレーニングセンター）、長居陸上競技場（ヤンマースタジアム長居）などへのアクセスにも便利です。
             </p>
           </div>
         </div>
@@ -148,7 +148,6 @@
             <p>
               昭和初期に建てられた大阪鋳物商の遊び心ある別邸。
               昭和初期に建てられた鋳物商人の邸宅。今では珍しい書院、障子、襖、縁側など、当時の趣が残っています。700平米を超える敷地に、広々としたお庭や広間、鋳物風呂があり、裕福な商人の暮らしを体験できる一棟貸し宿泊施設です。
-              意匠や空間にこだわった本物の建物と、その時代とその建物を大切にしたここでしかできないことをお楽しみください。
             </p>
           </div>
         </div>
@@ -161,7 +160,7 @@
           <div class="hotel-content">
             <h3>THE　base堺東アパートメントホテル</h3>
             <p>
-              ２０１８年８月に新館がオープン、最大５名様まで宿泊可能な畳のある広々和洋室が、全５４室となりました。
+              最大５名様まで宿泊可能な畳のある広々和洋室が、全５４室。
               新築マンションをホテルへコンバージョンし、ミニキッチンやセパレートタイプの風呂・トイレを完備。
               大阪市内やベイエリアへのアクセスもよく、ビジネスでの長期利用や、グループ、ファミリーのご利用にも最適です。
             </p>
@@ -203,7 +202,7 @@
           <div class="hotel-content">
             <h3>ホテルアストンプラザ大阪堺</h3>
             <p>
-              2020年10月堺区安井町交差点北側にオープンしたホテルアストンプラザホテル大阪堺（旧ホテル1-2-3堺）
+              堺区安井町交差点北側にオープンしたホテルアストンプラザホテル大阪堺。
               駐車場45台完備で臨海地域からのアクセスも良く、観光スポット、仁徳天皇陵古墳や大型レジャー施設（USJ）にも大変便利なホテルです。
             </p>
           </div>
