--- a/course1map.html
+++ b/course1map.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>観光マップ＋仁徳天皇陵古墳</title>
+    <title>観光マップ - 百舌鳥古墳群めぐり</title>
     <style>
       html,
       body {
