観光コース１，２修正

--- a/観光コース　決定1.html
+++ b/観光コース　決定1.html
@@ -91,7 +91,7 @@
       <section class="overview">
         <h2>コースの概要</h2>
         <p>
-          大阪は、歴史と現代文化が融合する魅力あふれる都市です。このコースでは、大阪の代表的な観光スポットとグルメエリアを効率よく巡るルートをご紹介します。
+          百舌鳥古墳群は、日本最大級の古墳群であり、古代の歴史と自然が調和する魅力的なスポットです。このコースでは、百舌鳥古墳群の代表的な古墳や周辺施設を巡りながら、歴史・文化・自然を体感できるルートをご紹介します。
         </p>
       </section>
 
