--- a/観光コース　決定2.html
+++ b/観光コース　決定2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>百舌鳥古墳群めぐり</title>
+    <title>堺の歴史とグルメ満喫コース</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -85,13 +85,13 @@
   </head>
   <body>
     <header>
-      <h1>百舌鳥古墳群めぐり</h1>
+      <h1>堺の歴史とグルメ満喫コース</h1>
     </header>
     <div class="container">
       <section class="overview">
         <h2>コースの概要</h2>
         <p>
-          大阪は、歴史と現代文化が融合する魅力あふれる都市です。このコースでは、大阪の代表的な観光スポットとグルメエリアを効率よく巡るルートをご紹介します。
+          堺は、古代から商業と文化が栄えた町であり、伝統と革新が息づく魅力的な都市です。このコースでは、堺の歴史的スポットと地元グルメを巡りながら、五感で堺を味わうルートをご紹介します。
         </p>
       </section>
 
