--- a/course2map.html
+++ b/course2map.html
@@ -230,7 +230,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAanGL60bWCdRLdFjyk-Xf_UI-HPnbHgXc&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key="
     ></script>
   </body>
 </html>
