--- a/course3map.html
+++ b/course3map.html
@@ -229,7 +229,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAanGL60bWCdRLdFjyk-Xf_UI-HPnbHgXc&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key="
     ></script>
   </body>
 </html>
