--- a/ホテル.html
+++ b/ホテル.html
@@ -84,7 +84,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAanGL60bWCdRLdFjyk-Xf_UI-HPnbHgXc&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key="
     ></script>
   </body>
 </html>
